...
                layout="@layout/content_recipe_details"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="start" />

            <include
                android:id="@+id/loading_view"
                layout="@layout/view_loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

            <include
                android:id="@+id/error_view"
                layout="@layout/view_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />
        </FrameLayout>

...
